<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="StructFrame" Id="{1bdc3e29-eca9-4d18-8487-dfa5b1e766e4}">
    <Declaration><![CDATA[TYPE StructFrame :
STRUCT
	rXpos : LREAL := 0;
	rYpos : LREAL := 0;
	rZpos : LREAL := 0;
	sAlias : STRING := '';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>