<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="GVL" Id="{f09b62d0-c0a9-403a-804d-b72361a29bce}">
    <Declaration><![CDATA[VAR_GLOBAL
	stGroupRef			: AXES_GROUP_REF;
	stAxis				: ARRAY[1..cAxesCount] OF AXIS_REF;
	stACSAxis			: ARRAY[1..cAxesCount] OF AXIS_REF;
	PointAPos			: ARRAY[1..5,1..6] OF MC_LREAL;
	PointAPos2			: ARRAY[1..5,1..6] OF MC_LREAL;
	PointBPos			: ARRAY[1..5,1..6] OF MC_LREAL;
	MidPointPos			: ARRAY[1..3] OF MC_LREAL;
	PointAMidPos		: ARRAY[1..3] OF MC_LREAL;
	PointBMidPos		: ARRAY[1..3] OF MC_LREAL;
	PointXTSMidPos		: ARRAY[1..6] OF MC_LREAL;
	PreviousUpPos		: ARRAY[1..3] OF MC_LREAL;
	DeltaVelocity		: INT := 100;
	UpToMidBlend		: INT := 0;
	MidToUpBlend		: INT := 0;
	PointXTSPos			: ARRAY[1..6] OF MC_LREAL;
	
	lrSpeed				: MC_LREAL := 200;
	acceleration		: MC_LREAL := 3000;
END_VAR

VAR_GLOBAL CONSTANT
	cAxesCount			: UINT:=3;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>